--- a/public/templates/dashboard/directives/programming-language-edit.html
+++ b/public/templates/dashboard/directives/programming-language-edit.html
@@ -25,17 +25,17 @@
         </div>
 
         <div class="dropdown">
-          <button class="btn btn-default dropdown-toggle col-sm-4"
+          <button class="btn btn-default dropdown-toggle col-sm-5"
                   type="button" id="dropdownMenu1"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="true">
-            {{ expLevel[updatedDifficulty[pl.language_id]] || expLevel[pl.difficulty_id] }}
+            <span><small>{{ expLevel[updatedDifficulty[pl.language_id]] || updatedDifficulty[pl.language_id] || expLevel[pl.difficulty_id] }}</small></span>
             <span class="caret"></span>
           </button>
 
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" ng-model='updatedDifficulty[pl.language_id]'>
-            <li ng-click="changeDifficulty(pl.language_id, 'None')">None</li>
+            <li ng-click="changeDifficulty(pl.language_id, 'Remove', 'Remove', pl.id)">Remove</li>
             <li ng-repeat="(levelId, level) in expLevel"
                 ng-click="changeDifficulty(pl.language_id, level, levelId, pl.id)">
               <span>{{level}}</span>
@@ -43,28 +43,29 @@
           </ul>
         </div>
 
-
-          <div class='col-sm-1'>
-            <small>
-              <span class="glyphicon glyphicon-remove"
-                  aria-hidden="true"
-                  ng-click='updateFieldForLanguage = false'>
-              </span>
-            </small>
+        <div class='col-sm-2'>
+          <div class='row'>
+            <div class='col-sm-8'>
+              <small>
+                <span class="glyphicon glyphicon-ok"
+                    aria-hidden="true"
+                    ng-click='update(); updateFieldForLanguage = false'>
+                </span>
+              </small>
+            </div>
           </div>
 
-          <div class='col-sm-1'>
-            <small>
-              <span class="glyphicon glyphicon-ok"
-                  aria-hidden="true"
-                  ng-click='update(); updateFieldForLanguage = false'>
-              </span>
-            </small>
+          <div class='row'>
+            <div class='col-sm-10 col-sm-offset-6'>
+              <small><small>
+                <span class="glyphicon glyphicon-remove"
+                    aria-hidden="true"
+                    ng-click='updateFieldForLanguage = false'>
+                </span>
+              </small></small>
+            </div>
           </div>
+        </div>
 
   </div> <!-- End of row -->
 </div> <!-- End of panel-title -->
-
-<!-- {{pl.language_id}}
-{{updatedDifficulty}} -->
-<!-- {{information.profile_languages}} -->
