removed wrong email in mailer template  --skip-ci

--- a/app/views/user_mailer/request_membership.html.erb
+++ b/app/views/user_mailer/request_membership.html.erb
@@ -1,4 +1,4 @@
-<p>Dear <%= @user.email %>, </p>
+<p>Dear <%= @project.owner.username %>, </p>
 
 <p>You have a message regarding <%= @project.title %>! </p>
 <p>
