--- a/public/templates/profiles/settings.html
+++ b/public/templates/profiles/settings.html
@@ -54,8 +54,10 @@
       </div>
 
       <!-- New Password -->
-      <div class="form-group" ng-class="{ 'has-error' : userForm.password.$invalid
-                                            && !userForm.password.$pristine }">
+      <div class="form-group" 
+            ng-if="!currentUser.user.provider"
+            ng-class="{ 'has-error' : userForm.password.$invalid &&
+                                      !userForm.password.$pristine }">
 
 
         <label>New Password (leave it blank if you don't want to change)
@@ -74,8 +76,10 @@
       </div>
 
       <!-- Password Confirmation -->
-      <div class="form-group" ng-class="{ 'has-error' : userForm.password_confirmation.$invalid
-                                          && !userForm.password_confirmation.$pristine }">
+      <div class="form-group" 
+            ng-if="!currentUser.user.provider"
+            ng-class="{ 'has-error' : userForm.password_confirmation.$invalid &&
+                                      !userForm.password_confirmation.$pristine }">
 
         <label>Password Confirmation
           <input type="password" name="password_confirmation" class="form-control" 
@@ -92,7 +96,9 @@
       </div>
 
       <!-- Current Password -->
-      <div class="form-group" ng-class="{ 'has-error' : userForm.current_password.$invalid
+      <div class="form-group" 
+            ng-if="!currentUser.user.provider"
+            ng-class="{ 'has-error' : userForm.current_password.$invalid
                                             && !userForm.$pristine }">
 
         <label>Current Password
@@ -100,7 +106,7 @@
                   ng-model="userInfo.current_password" 
                   required ng-minlength="8" ng-maxlength="25">
         </label>
-
+{{currentUser.user.provider}}
         <p  class="help-block"
             ng-show="!userForm.$pristine        &&
                     userForm.current_password.$invalid         &&
