--- a/app/views/user_mailer/request_membership.html.erb
+++ b/app/views/user_mailer/request_membership.html.erb
@@ -5,4 +5,4 @@
 <%= link_to "Go to your codelegy dashboard", domain_url %> to see the details.
 </p>
 
-To unsubscribe to email notifications, login to your codelegy account to change settings.
+To modify to email notifications frequency, login to your codelegy account to change settings.
