--- a/app/views/user_mailer/mailboxer_msg.text.erb
+++ b/app/views/user_mailer/mailboxer_msg.text.erb
@@ -3,4 +3,4 @@
 <p>You have a message waiting for you at <%= link_to "Codelegy", domain_url %>. Go to your inbox to read it.
 </p>
 
-To unsubscribe to email notifications, login to your codelegy account to change settings.
+To modify to email notifications frequency, login to your codelegy account to change settings.
