--- a/app/views/user_mailer/request_membership.text.erb
+++ b/app/views/user_mailer/request_membership.text.erb
@@ -4,4 +4,4 @@ You have a message regarding <%= @project.title %>!
 
 <%= link_to "Go to your codelegy dashboard", domain_url %>
 
-To unsubscribe to email notifications, login to your codelegy account to change settings.
+To modify to email notifications frequency, login to your codelegy account to change settings.
