change user model, omniauth user will merge to regular user by email  --skip-ci

--- a/public/templates/registration/sign-in.html
+++ b/public/templates/registration/sign-in.html
@@ -67,7 +67,7 @@
       </div>
 
       <footer class="screen-login">
-        <a href="#" class="text-muted">Forgot password</a>
+        <a href="#" class="text-muted" ng-click="resetPassword()">Forgot password</a>
       </footer>
     </form>
   </div>
