--- a/public/templates/header-1.html
+++ b/public/templates/header-1.html
@@ -19,7 +19,7 @@
           <a ui-sref="home">Codelegy</a>
         </li>
         <li>
-          <a ui-sref="projectsList">Dashboard</a>
+          <a ui-sref='dashboard'>Dashboard</a>
         </li>
         <li>
           <a ui-sref="projects">Projects</a>
@@ -44,7 +44,7 @@
         <li><a ui-sref="home.form.signup" ng-if='!authenticated.status'>Sign Up</a></li>
 
         <li ng-if='authenticated.status'>
-          <a ui-sref='dashboard'>
+          <a>
             Welcome {{currentUser.user.username}}
           </a>
         </li>
