edits to new design

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,4 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Bangers); 
+.sign-in-box{
+  margin-top: 10%;
+}
 
 .megrim {
   font-family: megrim, fantasy;
@@ -38,4 +41,9 @@
   -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
   -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
   transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+}
+
+.project-panel{
+
+  border: solid 1px #CCC; -moz-box-shadow: 1px 1px 5px #999; -webkit-box-shadow: 1px 1px 5px #999; box-shadow: 1px 1px 5px #999;
 }
