--- a/public/templates/mailbox/inbox.html
+++ b/public/templates/mailbox/inbox.html
@@ -14,7 +14,7 @@
         </div>
   
     </div>
-    <table class="table table-striped">
+    <table class="table table-striped table-borderd">
   
     </table>
   </div>
