--- a/public/templates/registration/sign-in.html
+++ b/public/templates/registration/sign-in.html
@@ -1,71 +1,74 @@
 
-<div class="container-fluid container-fill-height">
-  <div class="container-content-middle">
-    <form role="form" name="signinForm"
-          ng-submit="processForm(signinForm.$valid)"
-          class="m-x-auto text-center app-login-form">
+<div class="row sign-in-box">
+  <div class="col-md-4 col-md-offset-4">
+    <div class="container-fluid container-fill-height">
+      <div class="container">
+        <form role="form" name="signinForm"
+              ng-submit="processForm(signinForm.$valid)"
+              class="m-x-auto text-center app-login-form">
 
-      <a href="../index.html" class="app-brand m-b-lg">
-        <img src="../assets/img/brand.png" alt="brand">
-      </a>
+          <a href="../index.html" class="app-brand m-b-lg">
+            <img src="img/logo.png" alt="brand">
+          </a>
+          <hr>
+          <!-- Email -->
+          <div class="form-group" ng-class="{ 'has-error' : signinForm.email.$invalid && !signinForm.email.$pristine }">
+            <input  class="form-control"
+                    name="email"
+                    placeholder="Email"
+                    ng-model="credentials.email"
+                    required ng-pattern="emailRegex">
 
-      <!-- Email -->
-      <div class="form-group" ng-class="{ 'has-error' : signinForm.email.$invalid && !signinForm.email.$pristine }">
-        <input  class="form-control"
-                name="email"
-                placeholder="Email"
-                ng-model="credentials.email"
-                required ng-pattern="emailRegex">
+          <p  ng-show="signinForm.email.$invalid &&
+              !signinForm.email.$pristine"
+              class="help-block">
+              Please enter a valid email
+          </p>
 
-      <p  ng-show="signinForm.email.$invalid &&
-          !signinForm.email.$pristine"
-          class="help-block">
-          Please enter a valid email
-      </p>
-
-      </div> <!-- Email End -->
+          </div> <!-- Email End -->
 
 
-      <!-- Password -->
-      <div class="form-group m-b-md" ng-class="{ 'has-error' : signinForm.password.$invalid
-                                          && !signinForm.password.$pristine }">
-        <input type="password"
-                name="password"
-                class="form-control"
-                placeholder="Password"
-                ng-model="credentials.password"
-                required ng-minlength="8" ng-maxlength="25">
-        <p  ng-show=" signinForm.password.$error.minlength"
-            class="help-block">
-          Please enter a password more than 8 characters in length
-        </p>
-        <p ng-show="signinForm.password.$error.maxlength" class="help-block">
-          Please enter a password less than 25 characters in length
-        </p>
+          <!-- Password -->
+          <div class="form-group m-b-md" ng-class="{ 'has-error' : signinForm.password.$invalid
+                                              && !signinForm.password.$pristine }">
+            <input type="password"
+                    name="password"
+                    class="form-control"
+                    placeholder="Password"
+                    ng-model="credentials.password"
+                    required ng-minlength="8" ng-maxlength="25">
+            <p  ng-show=" signinForm.password.$error.minlength"
+                class="help-block">
+              Please enter a password more than 8 characters in length
+            </p>
+            <p ng-show="signinForm.password.$error.maxlength" class="help-block">
+              Please enter a password less than 25 characters in length
+            </p>
+          </div>
+
+          <div class="m-b-lg">
+            <button type="submit "class="btn btn-primary">
+              Sign In
+            </button>
+
+            <button class="btn btn-primary"
+                    ui-sref="home.form.signup">Sign up</button>
+
+            <br>
+
+            <a class="btn btn-primary"
+                href="/users/auth/github"
+                id='github-button-sign-in'>
+              Sign in with <b>Github</b>
+            </a>
+
+          </div>
+
+          <footer class="screen-login">
+            <a href="#" class="text-muted">Forgot password</a>
+          </footer>
+        </form>
       </div>
-
-      <div class="m-b-lg">
-        <button type="submit "class="btn btn-primary">
-          Sign In
-        </button>
-
-        <button class="btn btn-default"
-                ui-sref="home.form.signup">Sign up</button>
-
-        <br>
-
-        <a class="btn btn-default"
-            href="/users/auth/github"
-            id='github-button-sign-in'>
-          Sign in with <b>Github</b>
-        </a>
-
-      </div>
-
-      <footer class="screen-login">
-        <a href="#" class="text-muted">Forgot password</a>
-      </footer>
-    </form>
+    </div>
   </div>
 </div>
-
