--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -14,7 +14,7 @@
 <br>
 <!-- End Languages -->
 
-<div class="container">
+<div class="wide-container">
   <br>
   <div class="pull-right">
     <div class="btn-group">
@@ -29,14 +29,8 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-3"><h2 class="page-header">Projects</h2></div>
+  <div><h2 class="page-header p-text bangers">Projects</h2></div>
   <div class="col-sm-4 col-sm-offset-3">
-<<<<<<< HEAD
-=======
-    <button ng-show="signedIn" ui-sref="projects.new"
-    class="btn btn-primary pull-right">New Project</button>
-
->>>>>>> 7b0c167eed4325f5bb31813d3ac128a37c005f64
   </div>
 </div>
 
@@ -57,7 +51,7 @@
   </div> <br>
 
 </div>
-</div>
+
   <nav>
     <a ng-click="prevPage()" aria-label="Previous">
       <span aria-hidden="true">&laquo;</span>Previous Page
@@ -142,14 +136,14 @@
   </div>
 </div>
 </div>
-  <nav>
+<!--   <nav>
     <a ng-click="prevPage()" aria-label="Previous">
       <span aria-hidden="true">&laquo;</span>Previous Page
     </a>
     <a  class="pull-right" ng-click="nextPage()" aria-label="Next">
       Next Page<span aria-hidden="true">&raquo;</span>
     </a>
-  </nav>
+  </nav> -->
 </div>
 
 
