--- a/public/templates/mailbox/inbox.html
+++ b/public/templates/mailbox/inbox.html
@@ -1,9 +1,9 @@
-
+<div class="wide-container"> 
+<h2 class="page-header bangers p-text">Inbox</h2>
   <div class="row">
 
     <div class="col-sm-5 col-sm-offset-2">
 
-        <h2 class="page-header">Inbox</h2>
         <div ng-repeat="email in inbox">
 
 
@@ -23,13 +23,7 @@
             </div>
             <hr>
           </div>
-
         </div>
-
-  
     </div>
-    <table class="table table-striped table-borderd">
-  
-    </table>
   </div>
-
+</div>
