--- a/public/templates/profiles/settings.html
+++ b/public/templates/profiles/settings.html
@@ -1,6 +1,7 @@
+<div class="wide-container"> 
 <div class="panel">
   <div class="panel-heading">
-    <h1>Account Setting</h1>  
+    <h2 class="bangers page-header p-text">Account Settings</h2>  
   </div>
   <div class="panel-body row">
 
@@ -128,4 +129,5 @@
       <button type="submit" class="btn btn-info">Update</button>
     </form>
   </div>
+</div>
 </div>
