--- a/public/templates/projects_dashboard.html
+++ b/public/templates/projects_dashboard.html
@@ -30,7 +30,7 @@
 
             <h5>
               {{project['owner?'] ? "Project Owner" : project.member_status }}
-              <button class="btn btn-default btn-sm pull-right" ng-if='(project.member_status == "member") || (project["owner?"])' data-toggle="modal" data-target="#mailModal{{project.id}}">
+              <button class="btn btn-primary btn-sm pull-right" ng-if='(project.member_status == "member") || (project["owner?"])' data-toggle="modal" data-target="#mailModal{{project.id}}">
                 Send a Group Message
               </button>
             </h5>
