--- a/public/templates/projects/new.html
+++ b/public/templates/projects/new.html
@@ -87,7 +87,7 @@
     <button ng-click="addTimeslot()" class="btn btn-default">Add Timeslot</button>
     {{timeslots}}
     <hr>
-    <button class="btn btn-primary" ng-click="submit(newProject)">
+    <button class="btn btn-primary" ng-click="submit()">
       Submit
     </button>
     {{newProject}}
