--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -83,7 +83,10 @@
           <strong>Project Owner:</strong>
           <a ui-sref="profiles.show({id: project.owner.id})">{{project.owner.username}}</a><br>
           <strong>Est. Difficulty:</strong>{{project.difficulty_name}} <br>
-          <strong>Times:</strong> {{project.availability}} <br>
+          <strong>Times:</strong>
+          <span ng-repeat="time in project.times">
+            <br>{{time[0]}} {{time[1] | date : 'shortTime'}} - {{time[2] | date : 'shortTime'}}
+          </span><br>
           <strong>Languages:</strong>
           <img ng-repeat="lang in project.language_urls" ng-src="{{lang.url}}" alt="{{lang.name}}"
           style="width:20px;margin:5px"> <br>
