--- a/public/templates/directives/availability_selector.html
+++ b/public/templates/directives/availability_selector.html
@@ -57,3 +57,7 @@ End Time: <span ng-if='end'>{{end.hour}}:{{end.minute}} </span>
 </select>
 <br><br>
 <button ng-click="addTimeslot()" class="btn btn-default">Add Timeslot</button>
+
+{{timeslots}}
+
+
