availability widget styled  --skip-ci

--- a/public/templates/directives/availability_selector.html
+++ b/public/templates/directives/availability_selector.html
@@ -1,59 +1,114 @@
 <!-- Days -->
-<div class="row text-center">
-  <b>Select days</b>
-</div><br>
 
-<div class="row">
-  <div class="col-sm-3" ng-repeat="(day,value) in days">
-    <button class="btn btn-default btn-block"
-            style="margin:10px"
-            ng-click='addDay(day)'
-            ng-class='{"active": days[day]}'>
-            <small>{{day}}</small>
-    </button>
+<div class='row' id='availability-widget'>
+
+  <div class="row text-center">
+    <b>Select Days</b>
+  </div><br>
+
+  <div class="row">
+    <div class="col-sm-3" ng-repeat="(day,value) in days">
+      <button class="btn btn-default btn-block"
+              style="margin:10px"
+              ng-click='addDay(day)'
+              ng-class='{"active": days[day]}'>
+              <small>{{day}}</small>
+      </button>
+    </div>
+  </div><br>
+
+  <div class='row'>
+
+    <!-- Start time -->
+    <div class='col-sm-6' style='border:1px solid #2f4154; padding:10px; border-radius:5px'>
+
+      <div  class="row text-center"
+            ng-hide='start.hour && start.minute && start.am'>
+          <b>Select Start Time</b>
+      </div>
+
+      <div  class="row text-center"
+            ng-show='start.hour && start.minute && start.am'>
+          <b>Selected start time is
+          <span style='color: #2f4154'>
+            {{start.hour}}:{{start.minute}} {{amPm[start.am]}}
+          </span></b>
+      </div><br>
+
+      <div class='row'>
+        <div class='col-sm-4'>
+          <select ng-model="start.hour" id="" style="width:100%">
+            <option value="" disabled selected>Hour</option>
+            <option ng-repeat="hour in hours" value="{{hour}}">{{hour}}</option>
+          </select>
+        </div>
+
+        <div class='col-sm-4'>
+          <select ng-model="start.minute" id="" style="width:100%">
+            <option value="" disabled selected>Minute</option>
+            <option ng-repeat="minute in minutes" value="{{minute}}">{{minute}}</option>
+          </select>
+        </div>
+
+        <div class='col-sm-4'>
+          <select ng-model="start.am" id="" style="width:100%">
+            <option value="" disabled selected>AM/PM</option>
+            <option ng-repeat="(key, value) in amPm" value="{{key}}">{{value}}</option>
+          </select>
+        </div>
+
+      </div>
+    </div> <!-- end of Start time / col-sm-6 -->
+
+    <!-- End time -->
+    <div class='col-sm-6' style='border:1px solid #1abc9c; padding:10px; border-radius:5px;'>
+
+      <div  class="row text-center"
+            ng-hide='end.hour && end.minute && end.am'>
+          <b>Select End Time</b>
+      </div>
+
+      <div  class="row text-center"
+            ng-show='end.hour && end.minute && end.am'>
+          <b>Selected end time is
+          <span style='color: #1abc9c'>
+            {{end.hour}}:{{end.minute}} {{amPm[end.am]}}
+          </span></b>
+      </div><br>
+
+      <div class='row'>
+        <div class='col-sm-4'>
+          <select ng-model="end.hour" id="" style="width:100%">
+            <option value="" disabled selected>Hour</option>
+            <option ng-repeat="hour in hours" value="{{hour}}">{{hour}}</option>
+          </select>
+        </div>
+
+        <div class='col-sm-4'>
+          <select ng-model="end.minute" id="" style="width:100%">
+            <option value="" disabled selected>Minute</option>
+            <option ng-repeat="minute in minutes" value="{{minute}}">{{minute}}</option>
+          </select>
+        </div>
+
+        <div class='col-sm-4'>
+          <select ng-model="end.am" id="" style="width:100%">
+            <option value="" disabled selected>AM/PM</option>
+            <option ng-repeat="(key, value) in amPm" value="{{key}}">{{value}}</option>
+          </select>
+        </div>
+
+      </div>
+    </div> <!-- end of End time / col-sm-6 -->
+
+  </div> <!-- end of row with start and end time -->
+
+  <br><br>
+  <div class='row'>
+    <div class='col-sm-4 col-sm-offset-4'>
+      <button ng-click="addTimeslot()" class="btn btn-default btn-block">
+        Add Time Slot
+      </button>
+    </div>
   </div>
 </div>
-
-<!-- Start time -->
-<div class='row'>
-  <div class='col-sm-2'>
-    <br>Start Time: {{start.hour}}:{{start.minute}}
-  </div>
-  <div class='col-sm-2'>
-    <select ng-model="start.hour" id="">
-      <option value="" disabled selected>Hour</option>
-      <option ng-repeat="hour in hours" value="{{hour}}">{{hour}}</option>
-    </select>
-  </div>
-  <div class='col-sm-2'>
-    <select ng-model="start.minute" id="">
-      <option value="" disabled selected>Minute</option>
-      <option ng-repeat="minute in minutes" value="{{minute}}">{{minute}}</option>
-    </select>
-  </div>
-  <div class='col-sm-2'>
-    <select ng-model="start.am" id="">
-      <option value="" disabled selected>AM/PM</option>
-      <option ng-repeat="(key, value) in amPm" value="{{key}}">{{value}}</option>
-    </select>
-  </div>
-</div>
-
-
-<!-- End time -->
-<br>
-End Time: <span ng-if='end'>{{end.hour}}:{{end.minute}} </span>
-<select ng-model="end.hour" id="">
-  <option value="" disabled selected>Hour</option>
-  <option ng-repeat="hour in hours" value="{{hour}}">{{hour}}</option>
-</select>
-<select ng-model="end.minute" id="">
-  <option value="" disabled selected>Minute</option>
-  <option ng-repeat="minute in minutes" value="{{minute}}">{{minute}}</option>
-</select>
-<select ng-model="end.am" id="">
-  <option value="" disabled selected>AM/PM</option>
-  <option ng-repeat="(key, value) in amPm" value="{{key}}">{{value}}</option>
-</select>
-<br><br>
-<button ng-click="addTimeslot()" class="btn btn-default">Add Timeslot</button>
