--- a/public/templates/dashboard/suggestions.html
+++ b/public/templates/dashboard/suggestions.html
@@ -42,9 +42,9 @@
 
       <div class="panel panel-default panel-link-list">
         <div class="panel-body">
-          © 2015 Bootstrap
+          © 2015 <span class="bangers">Codelegy</span>
 
-          <a href="#">About</a>
+<!--           <a href="#">About</a>
           <a href="#">Help</a>
           <a href="#">Terms</a>
           <a href="#">Privacy</a>
@@ -57,6 +57,6 @@
           <a href="#">Status</a>
           <a href="#">Apps</a>
           <a href="#">Jobs</a>
-          <a href="#">Advertise</a>
+          <a href="#">Advertise</a> -->
         </div>
       </div>
