--- a/public/templates/dashboard/layout.html
+++ b/public/templates/dashboard/layout.html
@@ -1,4 +1,4 @@
-<div class="container p-t-md">
+<div class="wide-container">
   <div class="row">
 
     <div class="col-sm-3" ui-view="profile"> Profile View </div>
