--- a/public/templates/dashboard/profile.html
+++ b/public/templates/dashboard/profile.html
@@ -1,4 +1,4 @@
-<h1>profile</h1>
+
 
 <!-- Profile info -->
 <div class="panel panel-default panel-profile m-b-md">
@@ -15,7 +15,7 @@
     </a>
 
     <h5 class="panel-title">
-      <a class="text-inherit" href="">{{information.user.username}}
+      <a class="text-inherit bangers p-text" href="">{{information.user.username}}
       </a>
     </h5>
 
@@ -57,7 +57,7 @@
       </div> <!-- end of panel-title -->
     </div> <!-- end of div m-b-md -->
 
-    <ul class="panel-menu">
+<!--     <ul class="panel-menu">
       <li class="panel-menu-item">
         <a href="#userModal" class="text-inherit" data-toggle="modal">
           Friends
@@ -65,13 +65,7 @@
         </a>
       </li>
 
-      <li class="panel-menu-item">
-        <a href="#userModal" class="text-inherit" data-toggle="modal">
-          Enemies
-          <h5 class="m-y-0">1</h5>
-        </a>
-      </li>
-    </ul>
+    </ul> -->
 
   </div> <!-- End of Panel body -->
 </div> <!-- End of Profile info -->
@@ -81,7 +75,7 @@
 
   <div class="panel-body">
 
-    <h5 class="m-t-0">
+    <h5 class="m-t-0 bangers p-text">
       Availability
     </h5>
 
@@ -130,7 +124,7 @@
   <div class="panel-body">
 
     <div>
-      <h5 class="m-t-0">
+      <h5 class="m-t-0 bangers p-text">
         Languages
         <small>·
         <a ng-click="addLanguage={'userInput':true}">Add</a>
