--- a/public/templates/dashboard/sales.html
+++ b/public/templates/dashboard/sales.html
@@ -1,16 +1,20 @@
-<h1>sales</h1>
-      <div class="alert alert-warning alert-dismissible hidden-xs" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <a class="alert-link" href="profile/index.html">Visit your profile!</a> Check your self, you aren't looking too good.
-      </div>
 
-      <div class="panel panel-default m-b-md hidden-xs">
-        <div class="panel-body">
-          <h5 class="m-t-0">Sponsored</h5>
-          <div data-grid="images" data-target-height="150">
-            <img class="media-object" data-width="640" data-height="640" data-action="zoom" src="assets/img/instagram_2.jpg">
-          </div>
-          <p><strong>It might be time to visit Iceland.</strong> Iceland is so chill, and everything looks cool here. Also, we heard the people are pretty nice. What are you waiting for?</p>
-          <button class="btn btn-primary-outline btn-sm">Buy a ticket</button>
-        </div>
+<!--       <div class="alert alert-warning alert-dismissible hidden-xs" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <a class="alert-link" href="profile/index.html">Visit your profile!</a> 
       </div>
+    -->
+    <div class="panel panel-default m-b-md hidden-xs">
+      <div class="panel-body">
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- profile-ad -->
+        <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-4404763259715513"
+        data-ad-slot="8518452580"
+        data-ad-format="auto"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
+    </div>
