--- a/public/templates/header-1.html
+++ b/public/templates/header-1.html
@@ -1,4 +1,5 @@
 
+
 <nav class="navbar navbar-inverse navbar-fixed-top app-navbar">
   <div class="container">
     <div class="navbar-header">
@@ -8,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" ui-sref="home">
          <p class="bangers">Codelegy</p>
       </a>
     </div>
