--- a/public/templates/dashboard/projects.html
+++ b/public/templates/dashboard/projects.html
@@ -10,7 +10,7 @@
         <div class="col-md-5">
           <h6>Project Info:</h6>
           <div class="media-body">
-          
+
               <div ng-hide="moreThan24HrsAgo(project.created_at)">
                 <i class="fa fa-clock-o fa-fw"></i>
                 <time am-time-ago="project.created_at"></time>
@@ -22,7 +22,10 @@
               <strong>Project Owner:</strong>
               <a ui-sref="profiles.show({id: project.owner.id})">{{project.owner.username}}</a><br>
               <strong>Est. Difficulty:</strong>{{project.difficulty_name}} <br>
-              <strong>Times:</strong> {{project.availability}} <br>
+              <strong>Times:</strong> <br>
+              <div ng-repeat="time in project.times">
+                {{time[0]}} {{time[1] | date : 'shortTime'}} - {{time[2] | date : 'shortTime'}}
+              </div>
               <strong>Languages:</strong>
               <img ng-repeat="lang in project.language_urls" ng-src="{{lang.url}}" alt="{{lang.name}}"
               style="width:20px;margin:5px"> <br>
@@ -36,7 +39,7 @@
               {{members.user}}
             </li>
           </ul>
-        </div>   
+        </div>
       </div>
 
 
