rest input for avial and cleaned up htmls  --skip-ci

--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -8,7 +8,7 @@
 
   <div class="col-sm-1 btn-group" ng-repeat="language in languages">
     <button class="btn btn-primary btn-embossed btn-block" ng-click='addLang(language)'
-    ng-class='{"active": langFilter[language]}'>{{language}}</button>{{langFilter[language]}}
+    ng-class='{"active": langFilter[language]}'>{{language}}</button>
   </div>
 </div>
 <br>
