--- a/public/templates/projects/new.html
+++ b/public/templates/projects/new.html
@@ -2,8 +2,9 @@
 <ui-view>
 <div class="row">
   <div class="col-xs-6 col-xs-offset-3">
-    <input  type="text" ng-model="newProject.title" placeholder="title">
-    <input type="text" ng-model="newProject.description" placeholder="description">
+    <input  type="text" style="width:100%;height:30px;" ng-model="newProject.title" placeholder="title">
+     <br>
+    <textarea style="width:100%;height:63px;resize:none;" ng-model="newProject.description" placeholder="description"></textarea>
     <br>
     <br>
     <div ng-repeat="language in languages" >
