--- a/public/templates/projects/index.html
+++ b/public/templates/projects/index.html
@@ -46,7 +46,7 @@
     <option value="Master">Master</option>
   </select>
 
-  <button ui-sref="projects.new"
+  <button ui-sref="projects.new" ng-show="authenticated.status"
   class="btn btn-sm btn-info pull-right">New Project</button>
 </div> <br>
 
