routing for github api updated  --skip-ci

--- a/public/templates/registration/form-sign-up.html
+++ b/public/templates/registration/form-sign-up.html
@@ -1,7 +1,7 @@
 <div class='row'>
   <br>
     <div class='col-sm-4 col-sm-offset-4'>
-        <a class="btn btn-default btn-block" href="/users/auth/github">
+        <a class="btn btn-default btn-block" href="/api/v1/users/auth/github">
             Sign up with <b>Github</b>
         </a>
     </div>
