working on tour

--- a/public/templates/dashboard/suggestions.html
+++ b/public/templates/dashboard/suggestions.html
@@ -1,6 +1,5 @@
 <h1>suggestions.html</h1>
-
-
+ <a ui-sref="tour">ass</a>
   <div class="panel panel-default m-b-md hidden-xs">
       <div class="panel-body">
         <h5 class="m-t-0">Likes <small>· <a href="#">View All</a></small></h5>
