--- a/public/templates/mailbox/email_details.html
+++ b/public/templates/mailbox/email_details.html
@@ -1,4 +1,4 @@
-
+<div class="wide-container">
   <div class="row">
 
     <div class="col-md-10">
@@ -19,5 +19,5 @@
     </div>
 
   </div>
-
+</div>
 
